--- a/back/package.json
+++ b/back/package.json
@@ -9,10 +9,13 @@
   },
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "@prisma/client": "^4.7.1",
+    "express": "^4.18.2",
+    "pm2": "^5.2.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "prisma": "^4.7.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   }
