--- a/back/package.json
+++ b/back/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^4.7.1",
+    "cpf-cnpj-validator": "^1.0.3",
     "express": "^4.18.2",
     "pm2": "^5.2.2"
   },
