--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.0",
+    "@mui/styled-engine": "^5.11.0",
+    "@mui/x-date-pickers": "^5.0.10",
+    "dayjs": "^1.11.7",
+    "flowbite": "^1.5.5",
+    "flowbite-react": "^0.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5"
