--- a/back/package.json
+++ b/back/package.json
@@ -10,11 +10,13 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^4.7.1",
+    "cors": "^2.8.5",
     "cpf-cnpj-validator": "^1.0.3",
     "express": "^4.18.2",
     "pm2": "^5.2.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
     "prisma": "^4.7.1",
     "ts-node-dev": "^2.0.0",
