--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.11.0",
     "@mui/styled-engine": "^5.11.0",
     "@mui/x-date-pickers": "^5.0.10",
+    "axios": "^1.2.1",
     "dayjs": "^1.11.7",
     "flowbite": "^1.5.5",
     "flowbite-react": "^0.3.7",
