--- a/back/package.json
+++ b/back/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^4.17.14",
     "prisma": "^4.7.1",
     "ts-node-dev": "^2.0.0",
+    "tsc": "^2.0.4",
     "typescript": "^4.9.4"
   }
 }
