--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -15,9 +16,9 @@
     "@mui/styled-engine": "^5.11.0",
     "@mui/x-date-pickers": "^5.0.10",
     "axios": "^1.2.1",
-    "dayjs": "^1.11.7",
     "flowbite": "^1.5.5",
     "flowbite-react": "^0.3.7",
+    "moment": "2.24.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
@@ -25,6 +26,7 @@
     "react-toastify": "^9.1.1"
   },
   "devDependencies": {
+    "@types/moment": "^2.13.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
